[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "conditional-estimator"
version = "0.1.0"
description = "Monotone conditional mean/variance estimator with root finding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.6",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
